test/visibility/private/lydia/outsideModule2.good
outsideModule2.chpl:1: error: Cannot access module 'anotherModule'
