test/visibility/private/lydia/outsideModule2.chpl
use anotherModule;
// anotherModule is private and defined in its own file.  This use should fail.

var x = 16;
writeln(secretFunction(x));
